# film_shot_classifier

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Film_type_classifier.xcodeproj/: project.pbxproj
csv_output/: out.csv
html/: _feature_detector_8hpp_source.html  _feature_proccesor_and_classifier_8hpp_source.html  _file_loader_8hpp_source.html  _film_shot_classifier_8hpp_source.html  _film_statistic_eval_8hpp_source.html  _result_displayer_8hpp_source.html  _test_dataset_eval_8hpp_source.html  _user_structs_8hpp_source.html  annotated.html  annotated_dup.js  class_feature_detector-members.html  class_feature_detector.html  class_feature_detector.js  class_film_statistics-members.html  class_film_statistics.html  class_film_statistics.js  class_image_loader-members.html  class_image_loader.html  class_image_loader.js  class_input_source-members.html  class_input_source.html  class_input_source.js  class_preprocessing-members.html  class_preprocessing.html  class_preprocessing.js  class_result_displayer-members.html  class_result_displayer.html  class_result_displayer.js  class_shot_classifier-members.html  class_shot_classifier.html  class_shot_classifier.js  class_shot_feature_extractor-members.html  class_shot_feature_extractor.html  class_shot_feature_extractor.js  class_test_dataset_eval-members.html  class_test_dataset_eval.html  class_test_dataset_eval.js  class_video_loader-members.html  class_video_loader.html  class_video_loader.js  (+40 more)
include/: FeatureDetector.hpp  FeatureProccesorAndClassifier.hpp  FileLoader.hpp  FilmShotClassifier.hpp  ResultDisplayer.hpp  (+3 more)
(+115 files in other folders)
